--- a/remote-config.json
+++ b/remote-config.json
@@ -1,4 +1,4 @@
 {
-	"domain": "https://mydream247.com",
-	"oldDomain": "https://mydream247.com"
+	"domain": "https://toofaan.vip",
+	"oldDomain": "https://toofaan.vip"
 }
